fix: Modify the z-index of Toaster (#309)

--- a/thaw/src/toast/toaster.css
+++ b/thaw/src/toast/toaster.css
@@ -1,5 +1,5 @@
 div.thaw-toaster-wrapper {
-    z-index: 1000000;
+    z-index: 1000001;
     position: absolute;
     top: 0px;
     left: 0px;
